--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.1.3",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
